--- a/app/src/main/res/layout/activity_main__alquilar_bicicleta_.xml
+++ b/app/src/main/res/layout/activity_main__alquilar_bicicleta_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main_MisPistas_Activity">
+    tools:context=".Main_AlquilarBicicleta_Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,16 +19,16 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="MIS PISTAS"
                 android:background="#5DAEA7"
+                android:gravity="center"
+                android:text="BICILETAS LIBRES"
                 android:textSize="30sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <ListView
-                android:id="@+id/lvMisPistas"
-                android:layout_width="match_parent"
-                android:layout_height="704dp" />
+                android:id="@+id/lvMisBicicletas"
+                android:layout_width="wrap_content"
+                android:layout_height="645dp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
