--- a/app/src/main/res/layout/activity_main__horario_.xml
+++ b/app/src/main/res/layout/activity_main__horario_.xml
@@ -22,13 +22,13 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvHorario"
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:background="#5DAEA7"
-                    android:text="HORARIO PABELLON DE LAHIGUERA MUNICIPAL"
-                    android:textSize="16sp"
+                    android:text="HORARIO"
+                    android:textSize="30sp"
                     android:textStyle="bold" />
 
                 <ListView
