--- a/app/src/main/res/layout/activity_main__inicio_.xml
+++ b/app/src/main/res/layout/activity_main__inicio_.xml
@@ -14,6 +14,19 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/btnIrInicio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:background="#1976d2"
+            android:onClick="IrInicio"
+            android:text="INICIO"
+            android:textColor="#FFF"
+            android:textSize="18sp" />
+
+        <Button
             android:id="@+id/btnMisPistas"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
