--- a/app/src/main/res/layout/activity_main__alquilar_pista_.xml
+++ b/app/src/main/res/layout/activity_main__alquilar_pista_.xml
@@ -88,7 +88,8 @@
                 android:id="@+id/tvPrueba"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="TextView"
+                android:visibility="invisible" />
 
 
         </LinearLayout>
