--- a/app/src/main/res/layout/activity_main__eliminar_bicicleta_.xml
+++ b/app/src/main/res/layout/activity_main__eliminar_bicicleta_.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Main_EliminarEditar_MiPista_Activity">
+    tools:context=".Main_EliminarBicicleta_Activity">
 
     <ScrollView
+        android:id="@+id/usuario"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="110dp">
@@ -16,86 +16,67 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginVertical="50dp"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="FECHA:"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="DIA:" />
 
             <EditText
-                android:id="@+id/edFecha"
+                android:id="@+id/edDia"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="HORA:"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="BICICLETA:" />
 
             <EditText
-                android:id="@+id/edHora"
+                android:id="@+id/edBicicleta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Name" />
+                android:inputType="textPersonName" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="PISTA:"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="USUARIO:" />
 
             <EditText
-                android:id="@+id/edPista"
+                android:id="@+id/edUsuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="MATERIAL"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <Spinner
-                android:id="@+id/snMaterial"
-                android:layout_width="115dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="150dp"
-                android:gravity="right"
-                android:padding="12dp"
-                android:textAlignment="gravity"
-                android:verticalScrollbarPosition="left" />
+                android:inputType="textPersonName" />
 
             <Button
-                android:id="@+id/btEliminar"
+                android:id="@+id/btnEliminar"
                 android:layout_width="match_parent"
                 android:textColor="#FFF"
                 android:textSize="14sp"
@@ -106,31 +87,31 @@
                 android:background="#1976d2"
                 android:text="ELIMINAR" />
 
-            <Button
-                android:id="@+id/btEditar"
+            <TextView
+                android:id="@+id/tvIDALQUILER"
                 android:layout_width="match_parent"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:text="EDITAR" />
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
 
             <TextView
-                android:id="@+id/spMate"
+                android:id="@+id/tvprueba"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                tools:visibility="invisible" />
+
             <TextView
-                android:id="@+id/nada"
+                android:id="@+id/tvprueba1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                tools:visibility="invisible" />
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
