--- a/app/src/main/res/layout/activity_main__add_pista_.xml
+++ b/app/src/main/res/layout/activity_main__add_pista_.xml
@@ -4,98 +4,109 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Main_EliminarEditar_MiPista_Activity">
+    tools:context=".Main_AddPista_Activity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="110dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="50dp"
+            android:layout_marginVertical="100dp"
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/tvIDUSUARIO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tvIDINFO"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="TextView"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/tvUsuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="FECHA:"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="USUARIO" />
 
             <EditText
-                android:id="@+id/edFecha"
+                android:id="@+id/edUsuario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:inputType="textPersonName"
+                android:ems="10"
                 android:text="Name" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/tvPista"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="HORA:"
                 android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/edHora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:enabled="false"
-                android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Name" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="PISTA:"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="PISTA" />
 
             <EditText
                 android:id="@+id/edPista"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:enabled="false"
                 android:gravity="center"
-                android:inputType="textPersonName"
+                android:ems="10"
                 android:text="Name" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/tvDIA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="MATERIAL"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:text="FECHA" />
 
-            <Spinner
-                android:id="@+id/snMaterial"
-                android:layout_width="115dp"
+            <EditText
+                android:id="@+id/edDia"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="150dp"
-                android:gravity="right"
-                android:padding="12dp"
-                android:textAlignment="gravity"
-                android:verticalScrollbarPosition="left" />
+                android:enabled="false"
+                android:gravity="center"
+                android:ems="10"
+                android:text="Name" />
+
+            <TextView
+                android:id="@+id/tvHora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:text="HORA" />
+
+            <EditText
+                android:id="@+id/edHora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:gravity="center"
+                android:ems="10"
+                android:text="Name" />
 
             <Button
-                android:id="@+id/btEliminar"
+                android:id="@+id/btnAlquilar"
                 android:layout_width="match_parent"
                 android:textColor="#FFF"
                 android:textSize="14sp"
@@ -104,33 +115,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="15dp"
                 android:background="#1976d2"
-                android:text="ELIMINAR" />
-
-            <Button
-                android:id="@+id/btEditar"
-                android:layout_width="match_parent"
-                android:textColor="#FFF"
-                android:textSize="14sp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:text="EDITAR" />
-
-            <TextView
-                android:id="@+id/spMate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:visibility="invisible" />
-            <TextView
-                android:id="@+id/nada"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:visibility="invisible" />
-
+                android:text="ALQUILAR" />
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
