--- a/app/src/main/res/layout/activity_main__alquilar_pista_.xml
+++ b/app/src/main/res/layout/activity_main__alquilar_pista_.xml
@@ -14,7 +14,7 @@
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="120dp"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp">
 
@@ -24,51 +24,15 @@
             android:orientation="vertical">
 
 
-        <Button
-                android:id="@+id/btnFutbol7"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:text="FUTBOL 7"
-                android:textColor="#FFF"
-                android:textSize="14sp" />
-
             <Button
-                android:id="@+id/btnFutbolSala"
+                android:id="@+id/btnPistas"
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="15dp"
                 android:background="#1976d2"
-                android:text="FUTBOL SALA"
-                android:textColor="#FFF"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/btnTennis"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:text="TENNIS"
-                android:textColor="#FFF"
-                android:textSize="14sp" />
-
-            <Button
-                android:id="@+id/btnPadel"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginRight="15dp"
-                android:background="#1976d2"
-                android:text="PADEL"
+                android:text="PISTAS"
                 android:textColor="#FFF"
                 android:textSize="14sp" />
 
@@ -81,6 +45,42 @@
                 android:layout_marginRight="15dp"
                 android:background="#1976d2"
                 android:text="BICICLETAS"
+                android:textColor="#FFF"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/btnClofit"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="15dp"
+                android:background="#1976d2"
+                android:text="CLOFIT"
+                android:textColor="#FFF"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/btnZumba"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="15dp"
+                android:background="#1976d2"
+                android:text="ZUMBA"
+                android:textColor="#FFF"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/btnPilates"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="15dp"
+                android:background="#1976d2"
+                android:text="PILATES"
                 android:textColor="#FFF"
                 android:textSize="14sp" />
 
