--- a/app/src/main/res/layout/activity_main__cargando_usuario_.xml
+++ b/app/src/main/res/layout/activity_main__cargando_usuario_.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +9,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_marginTop="120dp"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginVertical="30dp"
+            android:layout_marginBottom="10dp"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/logo" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -19,4 +28,4 @@
             android:layout_height="122dp" />
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
