--- a/app/src/main/res/layout/activity_main__pistas_libres_.xml
+++ b/app/src/main/res/layout/activity_main__pistas_libres_.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main_AlquilarBicicleta_Activity">
+    tools:context=".Main_PistasLibres_Activity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,24 +21,14 @@
                 android:layout_height="wrap_content"
                 android:background="#5DAEA7"
                 android:gravity="center"
-                android:text="BICICLETAS LIBRES"
+                android:text="PISTAS LIBRES"
                 android:textSize="30sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tvPrueba"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:visibility="invisible"
-                tools:visibility="invisible" />
-
             <ListView
-                android:id="@+id/lvMisBicicletas"
-                android:layout_width="wrap_content"
-                android:layout_height="521dp" >
-
-            </ListView>
+                android:id="@+id/lvPistasLibres"
+                android:layout_width="match_parent"
+                android:layout_height="456dp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
